# doto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust-ci.yml
bench/: Cargo.toml
bench/src/: args.rs  cli.rs  generator.rs  main.rs  matrix.rs  options.rs  runner.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  model.rs  scanner.rs
core/tests/: scan_gitignore.rs  scan_roots.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  config.rs  dotenv.rs  list.rs  main.rs  messages.rs  progress.rs  run.rs  settings.rs
crates/cli/src/commands/: list.rs  mod.rs
crates/cli/src/commands/renderer/: mod.rs  pipeline.rs  style.rs
crates/cli/src/renderer/: mod.rs  pipeline.rs  snippet.rs  style.rs
crates/core/: Cargo.toml
crates/core/src/: builtin.rs  comments.rs  config.rs  constants.rs  control.rs  error.rs  filter.rs  lib.rs  model.rs  result.rs  scanner.rs  utils.rs
crates/core/src/dimension/: mod.rs
crates/core/src/domain/: dimension.rs  group.rs  mark.rs  mod.rs  scan.rs
crates/core/src/filter/: config.rs  mod.rs
crates/core/src/scanner/: file.rs  mod.rs  report.rs  stats.rs  walk.rs
crates/core/src/sort/: config.rs  group.rs  mod.rs  pipeline.rs  stages.rs  tree.rs
crates/core/src/syntax/: comments.rs  mod.rs
crates/core/tests/: scan_basic.rs  scan_comments.rs  scan_filters.rs  scan_gitignore.rs  scan_progress.rs  scan_roots.rs  scan_sort.rs
