# MARK: - workspace metadata
[workspace]
resolver = "3"
members = ["crates/*", "bench"]

# MARK: - workspace shared
[workspace.package]
version = "0.1.0"
authors = ["Ly"]
license = "MIT"
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/utakotoba/doto"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

# MARK: - dependency catalog
[workspace.dependencies]
ignore = "0.4"
regex = "1.10"
thiserror = "1.0"
tempfile = "3.10"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
colored = "3.1.1"
rand = "0.8"
# workspace crates
doto-core = { path = "crates/core" }

# MARK: - build profile
[profile.release]
opt-level = 3
lto = true
panic = "abort"
