# MARK: - workspace metadata
[workspace]
resolver = "3"
members = ["crates/*", "bench"]

# MARK: - workspace shared
[workspace.package]
version = "0.1.4"
authors = ["Ly"]
license = "MIT"
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/utakotoba/doto"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

# MARK: - dependency catalog
[workspace.dependencies]
ignore = "0.4"
regex = "1.12"
thiserror = "2.0"
memchr = "2.7.6"
clap = { version = "4.5", features = ["derive"] }
config = "0.15.19"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
colored = "3.1"
rand = "0.9"
indicatif = "0.18"
# for test and baseline
tempfile = "3.10"
# workspace crates
doto-core = { version = "0.1.4", path = "crates/core" }

# MARK: - build profile
[profile.release]
opt-level = 3
lto = true
panic = "abort"
