[package]
name = "koda-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
koda-core = { path = "../crates/core" }
rand.workspace = true
tempfile.workspace = true
colored.workspace = true
