[package]
name = "doto-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
doto-core = { workspace = true }
rand.workspace = true
tempfile.workspace = true
colored.workspace = true
clap.workspace = true
