[package]
name = "koda"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
koda-core = { path = "../core" }
serde.workspace = true
colored.workspace = true
