[package]
name = "koda"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
koda-core = { workspace = true }
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
serde.workspace = true
colored.workspace = true
