[package]
name = "doto-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
ignore.workspace = true
regex.workspace = true
thiserror.workspace = true
serde.workspace = true
memchr.workspace = true

[dev-dependencies]
tempfile.workspace = true
