[package]
name = "doto-core"
description = "The comment mark searching engine used under doto cli tool"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
ignore.workspace = true
thiserror.workspace = true
serde.workspace = true
memchr.workspace = true

[dev-dependencies]
tempfile.workspace = true
